Adding id in html,adding .disabled class

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="container" id="c">
       <p id="pc1">Player X Turn</p>
       <p id="pc2"></p>
-      <div class="box">
+      <div class="box" id="b">
         <div class="cell" id="c1"></div>
         <div class="cell" id="c2"></div>
         <div class="cell" id="c3"></div>
